--- a/keras_tutorial/Xception_entry_flow.ipynb
+++ b/keras_tutorial/Xception_entry_flow.ipynb
@@ -2,9 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    }
+   ],
    "source": [
     "import keras\n",
     "from keras import Model\n",
@@ -14,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,9 +72,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From /usr/local/lib/python3.7/site-packages/tensorflow/python/framework/op_def_library.py:263: colocate_with (from tensorflow.python.framework.ops) is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Colocations handled automatically by placer.\n"
+     ]
+    }
+   ],
    "source": [
     "inputs = keras.layers.Input(shape=(299, 299, 3))\n",
     "outputs = classification_layer(entry_flow(inputs))"
@@ -74,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,9 +101,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "__________________________________________________________________________________________________\n",
+      "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      "input_1 (InputLayer)            (None, 299, 299, 3)  0                                            \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_1 (Conv2D)               (None, 150, 150, 32) 896         input_1[0][0]                    \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_1 (BatchNor (None, 150, 150, 32) 128         conv2d_1[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_1 (Activation)       (None, 150, 150, 32) 0           batch_normalization_1[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_2 (Conv2D)               (None, 150, 150, 64) 18496       activation_1[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_2 (BatchNor (None, 150, 150, 64) 256         conv2d_2[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_2 (Activation)       (None, 150, 150, 64) 0           batch_normalization_2[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "separable_conv2d_1 (SeparableCo (None, 150, 150, 128 8896        activation_2[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_3 (BatchNor (None, 150, 150, 128 512         separable_conv2d_1[0][0]         \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_3 (Activation)       (None, 150, 150, 128 0           batch_normalization_3[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "separable_conv2d_2 (SeparableCo (None, 150, 150, 128 17664       activation_3[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_4 (BatchNor (None, 150, 150, 128 512         separable_conv2d_2[0][0]         \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_4 (Activation)       (None, 150, 150, 128 0           batch_normalization_4[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_1 (MaxPooling2D)  (None, 75, 75, 128)  0           activation_4[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_3 (Conv2D)               (None, 75, 75, 128)  8320        activation_2[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "add_1 (Add)                     (None, 75, 75, 128)  0           max_pooling2d_1[0][0]            \n",
+      "                                                                 conv2d_3[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "separable_conv2d_3 (SeparableCo (None, 75, 75, 256)  34176       add_1[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_5 (BatchNor (None, 75, 75, 256)  1024        separable_conv2d_3[0][0]         \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_5 (Activation)       (None, 75, 75, 256)  0           batch_normalization_5[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "separable_conv2d_4 (SeparableCo (None, 75, 75, 256)  68096       activation_5[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_6 (BatchNor (None, 75, 75, 256)  1024        separable_conv2d_4[0][0]         \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_6 (Activation)       (None, 75, 75, 256)  0           batch_normalization_6[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_2 (MaxPooling2D)  (None, 38, 38, 256)  0           activation_6[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_4 (Conv2D)               (None, 38, 38, 256)  33024       add_1[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "add_2 (Add)                     (None, 38, 38, 256)  0           max_pooling2d_2[0][0]            \n",
+      "                                                                 conv2d_4[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "separable_conv2d_5 (SeparableCo (None, 38, 38, 728)  189400      add_2[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_7 (BatchNor (None, 38, 38, 728)  2912        separable_conv2d_5[0][0]         \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_7 (Activation)       (None, 38, 38, 728)  0           batch_normalization_7[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "separable_conv2d_6 (SeparableCo (None, 38, 38, 728)  537264      activation_7[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "batch_normalization_8 (BatchNor (None, 38, 38, 728)  2912        separable_conv2d_6[0][0]         \n",
+      "__________________________________________________________________________________________________\n",
+      "activation_8 (Activation)       (None, 38, 38, 728)  0           batch_normalization_8[0][0]      \n",
+      "__________________________________________________________________________________________________\n",
+      "max_pooling2d_3 (MaxPooling2D)  (None, 19, 19, 728)  0           activation_8[0][0]               \n",
+      "__________________________________________________________________________________________________\n",
+      "conv2d_5 (Conv2D)               (None, 19, 19, 728)  187096      add_2[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "add_3 (Add)                     (None, 19, 19, 728)  0           max_pooling2d_3[0][0]            \n",
+      "                                                                 conv2d_5[0][0]                   \n",
+      "__________________________________________________________________________________________________\n",
+      "flatten_1 (Flatten)             (None, 262808)       0           add_3[0][0]                      \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_1 (Dense)                 (None, 100)          26280900    flatten_1[0][0]                  \n",
+      "__________________________________________________________________________________________________\n",
+      "dense_2 (Dense)                 (None, 10)           1010        dense_1[0][0]                    \n",
+      "==================================================================================================\n",
+      "Total params: 27,394,518\n",
+      "Trainable params: 27,389,878\n",
+      "Non-trainable params: 4,640\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "model.summary()"
    ]
