--- a/transfer learning.ipynb
+++ b/transfer learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,25 +39,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "session_2\n",
-      "grammatical_evolution\n",
-      "session_3\n",
-      "session_4\n",
-      "keras_tutorial\n",
-      "keras_tutorial/Xception.jpg\n",
-      "session_1\n",
-      "talk_23_march\n",
-      "talk_23_march/unnamed.jpg\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for i_label, folder in enumerate(folders):\n",
     "    print(folder)\n",
@@ -74,7 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x_train = np.asarray(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,18 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://github.com/fchollet/deep-learning-models/releases/download/v0.6/mobilenet_1_0_224_tf_no_top.h5\n",
-      "17227776/17225924 [==============================] - 62s 4us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "n_classes = 2\n",
     "\n",
@@ -118,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,208 +111,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model: \"model_1\"\n",
-      "_________________________________________________________________\n",
-      "Layer (type)                 Output Shape              Param #   \n",
-      "=================================================================\n",
-      "input_3 (InputLayer)         (None, None, None, 3)     0         \n",
-      "_________________________________________________________________\n",
-      "conv1_pad (ZeroPadding2D)    (None, None, None, 3)     0         \n",
-      "_________________________________________________________________\n",
-      "conv1 (Conv2D)               (None, None, None, 32)    864       \n",
-      "_________________________________________________________________\n",
-      "conv1_bn (BatchNormalization (None, None, None, 32)    128       \n",
-      "_________________________________________________________________\n",
-      "conv1_relu (ReLU)            (None, None, None, 32)    0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_1 (DepthwiseConv2D)  (None, None, None, 32)    288       \n",
-      "_________________________________________________________________\n",
-      "conv_dw_1_bn (BatchNormaliza (None, None, None, 32)    128       \n",
-      "_________________________________________________________________\n",
-      "conv_dw_1_relu (ReLU)        (None, None, None, 32)    0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_1 (Conv2D)           (None, None, None, 64)    2048      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_1_bn (BatchNormaliza (None, None, None, 64)    256       \n",
-      "_________________________________________________________________\n",
-      "conv_pw_1_relu (ReLU)        (None, None, None, 64)    0         \n",
-      "_________________________________________________________________\n",
-      "conv_pad_2 (ZeroPadding2D)   (None, None, None, 64)    0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_2 (DepthwiseConv2D)  (None, None, None, 64)    576       \n",
-      "_________________________________________________________________\n",
-      "conv_dw_2_bn (BatchNormaliza (None, None, None, 64)    256       \n",
-      "_________________________________________________________________\n",
-      "conv_dw_2_relu (ReLU)        (None, None, None, 64)    0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_2 (Conv2D)           (None, None, None, 128)   8192      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_2_bn (BatchNormaliza (None, None, None, 128)   512       \n",
-      "_________________________________________________________________\n",
-      "conv_pw_2_relu (ReLU)        (None, None, None, 128)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_3 (DepthwiseConv2D)  (None, None, None, 128)   1152      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_3_bn (BatchNormaliza (None, None, None, 128)   512       \n",
-      "_________________________________________________________________\n",
-      "conv_dw_3_relu (ReLU)        (None, None, None, 128)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_3 (Conv2D)           (None, None, None, 128)   16384     \n",
-      "_________________________________________________________________\n",
-      "conv_pw_3_bn (BatchNormaliza (None, None, None, 128)   512       \n",
-      "_________________________________________________________________\n",
-      "conv_pw_3_relu (ReLU)        (None, None, None, 128)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pad_4 (ZeroPadding2D)   (None, None, None, 128)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_4 (DepthwiseConv2D)  (None, None, None, 128)   1152      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_4_bn (BatchNormaliza (None, None, None, 128)   512       \n",
-      "_________________________________________________________________\n",
-      "conv_dw_4_relu (ReLU)        (None, None, None, 128)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_4 (Conv2D)           (None, None, None, 256)   32768     \n",
-      "_________________________________________________________________\n",
-      "conv_pw_4_bn (BatchNormaliza (None, None, None, 256)   1024      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_4_relu (ReLU)        (None, None, None, 256)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_5 (DepthwiseConv2D)  (None, None, None, 256)   2304      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_5_bn (BatchNormaliza (None, None, None, 256)   1024      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_5_relu (ReLU)        (None, None, None, 256)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_5 (Conv2D)           (None, None, None, 256)   65536     \n",
-      "_________________________________________________________________\n",
-      "conv_pw_5_bn (BatchNormaliza (None, None, None, 256)   1024      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_5_relu (ReLU)        (None, None, None, 256)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pad_6 (ZeroPadding2D)   (None, None, None, 256)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_6 (DepthwiseConv2D)  (None, None, None, 256)   2304      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_6_bn (BatchNormaliza (None, None, None, 256)   1024      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_6_relu (ReLU)        (None, None, None, 256)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_6 (Conv2D)           (None, None, None, 512)   131072    \n",
-      "_________________________________________________________________\n",
-      "conv_pw_6_bn (BatchNormaliza (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_6_relu (ReLU)        (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_7 (DepthwiseConv2D)  (None, None, None, 512)   4608      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_7_bn (BatchNormaliza (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_7_relu (ReLU)        (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_7 (Conv2D)           (None, None, None, 512)   262144    \n",
-      "_________________________________________________________________\n",
-      "conv_pw_7_bn (BatchNormaliza (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_7_relu (ReLU)        (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_8 (DepthwiseConv2D)  (None, None, None, 512)   4608      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_8_bn (BatchNormaliza (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_8_relu (ReLU)        (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_8 (Conv2D)           (None, None, None, 512)   262144    \n",
-      "_________________________________________________________________\n",
-      "conv_pw_8_bn (BatchNormaliza (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_8_relu (ReLU)        (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_9 (DepthwiseConv2D)  (None, None, None, 512)   4608      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_9_bn (BatchNormaliza (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_9_relu (ReLU)        (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_9 (Conv2D)           (None, None, None, 512)   262144    \n",
-      "_________________________________________________________________\n",
-      "conv_pw_9_bn (BatchNormaliza (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_9_relu (ReLU)        (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_10 (DepthwiseConv2D) (None, None, None, 512)   4608      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_10_bn (BatchNormaliz (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_10_relu (ReLU)       (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_10 (Conv2D)          (None, None, None, 512)   262144    \n",
-      "_________________________________________________________________\n",
-      "conv_pw_10_bn (BatchNormaliz (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_10_relu (ReLU)       (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_11 (DepthwiseConv2D) (None, None, None, 512)   4608      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_11_bn (BatchNormaliz (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_11_relu (ReLU)       (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_11 (Conv2D)          (None, None, None, 512)   262144    \n",
-      "_________________________________________________________________\n",
-      "conv_pw_11_bn (BatchNormaliz (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_11_relu (ReLU)       (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pad_12 (ZeroPadding2D)  (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_12 (DepthwiseConv2D) (None, None, None, 512)   4608      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_12_bn (BatchNormaliz (None, None, None, 512)   2048      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_12_relu (ReLU)       (None, None, None, 512)   0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_12 (Conv2D)          (None, None, None, 1024)  524288    \n",
-      "_________________________________________________________________\n",
-      "conv_pw_12_bn (BatchNormaliz (None, None, None, 1024)  4096      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_12_relu (ReLU)       (None, None, None, 1024)  0         \n",
-      "_________________________________________________________________\n",
-      "conv_dw_13 (DepthwiseConv2D) (None, None, None, 1024)  9216      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_13_bn (BatchNormaliz (None, None, None, 1024)  4096      \n",
-      "_________________________________________________________________\n",
-      "conv_dw_13_relu (ReLU)       (None, None, None, 1024)  0         \n",
-      "_________________________________________________________________\n",
-      "conv_pw_13 (Conv2D)          (None, None, None, 1024)  1048576   \n",
-      "_________________________________________________________________\n",
-      "conv_pw_13_bn (BatchNormaliz (None, None, None, 1024)  4096      \n",
-      "_________________________________________________________________\n",
-      "conv_pw_13_relu (ReLU)       (None, None, None, 1024)  0         \n",
-      "_________________________________________________________________\n",
-      "global_average_pooling2d_1 ( (None, 1024)              0         \n",
-      "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 1024)              1049600   \n",
-      "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 1024)              1049600   \n",
-      "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 512)               524800    \n",
-      "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 2)                 1026      \n",
-      "=================================================================\n",
-      "Total params: 5,853,890\n",
-      "Trainable params: 5,832,002\n",
-      "Non-trainable params: 21,888\n",
-      "_________________________________________________________________\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model.summary()"
    ]
@@ -339,6 +124,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "model.compile(optimizer = 'Adam',\n",
+    "              loss ='categorical_crossentropy',\n",
+    "              metrics = ['accuracy'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create on hot encoding \n",
     "# create train/test split"
    ]
   },
@@ -348,8 +145,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.train(x_train, y_train)"
+    "model.fit(x_train, y_train, validation_data=[x_test, y_test])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
